# EyeTracker

./: .gitignore  CMakeLists.txt  aa.txt  main.cpp  makefile
CMAKE/: CMakeLists.txt  makefile
ELSE/else_morphsplit/: .algo.h.swp  CMakeLists.txt  algo.h  blob_gen.h  canny_impl.h  filter_edges.h  find_best_edge.h  main.cpp
ELSE/else_morphsplit/Helpers/: DrawHelpers.hpp
Helpers/: const.hpp
Hough/: .HoughCircle.hpp.swp  Hough.cpp  HoughCircle.hpp  HoughCircleGradient.hpp  HoughCircleTBB.hpp  houghCircular.hpp
RASNAC/: ConicSection.h  Rasnac.hpp
Starburst/: Starburst.cpp  Starburst.h
images/: pupil-ellipses.txt
precompiled/: CompileTimeAngle.hpp
time/: timer.cpp
